# soulhub-cli

./: .gitignore  BUG_FIXES_COMPLETE.md  COMPLETE_BUILD_SUMMARY.md  COMPLETE_SYSTEM_GUIDE.md  Dockerfile  E2E_TEST_RESULTS.md  LLM_SETUP_PROTOCOL.md  QUICKSTART.md  README.md  VERIFICATION_READY.md  VERSION_STRATEGY.md  catalog-example.json  docker-compose.yml  requirements-multimodal.txt  requirements-realtime.txt  requirements-training.txt  requirements.txt  setup.py  soulhub-e2e-report-20260227_092020.md  soulhub-e2e-report-20260227_092238.md  soulhub_cli.py  soulhub_multimodal.py  soulhub_realtime.py  soulhub_training.py  verify_installation.py
memory-web/: .gitignore  PGVECTOR_INSTALL.md  alembic.ini  pyproject.toml  setup.bat  start.bat
memory-web/alembic/: env.py
memory-web/alembic/versions/: 001_initial_schema.py  002_add_pgvector_column.py  003_utility_scoring_embedding_queue.py  004_idempotency_constraints.py
memory-web/app/: celery_app.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
memory-web/app/parsers/: claude_history.py  claude_session.py  shared_chat.py  sqlite_memory.py
memory-web/app/pipelines/: embedder.py  entity_extractor.py  memory_synthesizer.py  segmenter.py  tagger.py
memory-web/app/routers/: ingest.py  memory.py  (+3 more)
memory-web/scripts/: run_all_pipelines.py  run_pipeline_direct.py  seed_from_sessions.py  setup_pgvector.py
memory-web/static/: dashboard.html
memory-web/tests/: conftest.py  test_api.py  test_live_api.py  test_parsers.py  test_retention.py  test_retrieval.py  test_segmenter.py  test_tagger.py
(+10 files in other folders)
